raw variable is ready

--- a/home5/src/main/resources/templates/questionnaires.html
+++ b/home5/src/main/resources/templates/questionnaires.html
@@ -21,7 +21,7 @@
         </tr>
     </table>
 
-    <th><a th:href = "@{/questionnaires/list}">Посмотреть содержимое листа</a></th>
+    <th><a th:href = "@{/teachers}">Учителя, зарегистрированные в  приложении</a></th>
 
 </body>
 </html>
