--- a/home5/src/main/resources/templates/teachers.html
+++ b/home5/src/main/resources/templates/teachers.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h2>Список преподвателя</h2>
-    <p>Ниже представлен список доступных тестов, которые можно проходить</p>
+    <h2>Список преподвателей</h2>
+    <p>Ниже представлен список преподавателей, их стаж и предметы. </p>
     <table>
         <tr>
             <th>ID</th>
@@ -25,8 +25,8 @@
 
     <th><a th:href = "@{/questionnaires}">Посмотреть все доступные методики</a></th>
     <p></p>
-    <p><th><a th:href = "@{/teachers/experience}">Фильтровать по опыту работы</a></th></p>
-    <p><th><a th:href = "@{/teachers/subjects}">Фильтровать по предмету</a></th></p>
+    <p><th><a th:href = "@{teachers/filter/0}">Фильтровать по опыту работы(по умолчанию - 0)</a></th></p>
+    <p><th><a th:href = "@{/teachers}">Фильтровать по предмету (функционал не доступен)</a></th></p>
 
 </body>
 </html>
